# at-bus-superset-server

./: .gitignore  Makefile  README.md  ansible.cfg  pyproject.toml  requirements.yml
.github/workflows/: deploy-superset.yml
files/: init-superset.sh
inventory/: hosts.yml
inventory/group_vars/all/: vars.yml  vault.yml
playbooks/: backup.yml  deploy.yml  download_backup.yml  restore.yml  setup-ssh.yml  update.yml  upload_backup.yml
playbooks/templates/: backup-manifest.j2  docker-compose.yml.j2  env.j2  superset_config.py.j2
scripts/: setup-ssh.sh
