[project]
name = "at-bus-superset-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible>=11.7.0",
    "ansible-core>=2.14.0",
    "cryptography>=3.4.8",
    "jinja2>=3.0.0",
    "jsonschema>=3.2.0",
    "netaddr>=0.8.0",
    "paramiko>=2.8.0",
    "passlib>=1.7.4",
    "psutil>=5.8.0",
    "python-dateutil>=2.8.0",
]
